# dynpaper

./: README.md  arguments.py  dynpaper.py  pyproject.toml  sample.yml  setup.py  woo.yml
docs/: About.md  Contributing.md  How.md  Usage.md  index.md
dynpaper/: __init__.py  arguments.py  desktop.py  dynpaper.py  pause.py  process_calls.py  schemas.py
sample_configs/: sample.1.yml  sample.2.yml  sample.3.yml  sample.yml
